--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.8.1",
     "@fortawesome/vue-fontawesome": "^0.1.6",
     "animate-sass": "^0.8.2",
+    "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
     "bootstrap-vue": "^2.0.0-rc.18",
     "chart.js": "^2.8.0",
@@ -26,9 +27,11 @@
     "vue-chartjs": "^3.4.2",
     "vue-perfect-scrollbar": "^0.1.0",
     "vue-router": "^3.0.5",
+    "vue-select": "^3.10.3",
     "vue-sidebar-menu": "^3.7.0",
+    "vue-store": "^0.3.1-moved",
     "vue2-google-maps": "^0.10.6",
-    "vuex": "^3.1.0"
+    "vuex": "^3.3.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.6.0",
